# abc

./: .b.c.swp  .ccls  .gitignore  .project  .vimspector.json  Book.c  Book.h  CMakeLists.txt  List.cpp  List.h  MurmurHash2.cpp  MyData.h  MyHashMap.hpp  MyList.hpp  TextFile.txt  ThreadPool.cpp  Util.cpp  Util.h  a.c  a.cpp  a1.cpp  a1.hpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  a_hash.cpp  aa.c  aa.cpp  aaa.cpp  ab.cpp  ajs.js  array.hpp  at.cpp  b.c  b.cpp  c.c  c.cpp  c20.cpp  common.h  (+38 more)
.vim/: coc-settings.json
.vscode_bak/: c_cpp_properties.json  launch.json  settings_user.json
_vscode_templ/: c_cpp_properties copy.json  c_cpp_properties.json  launch.json  settings.json  settings_user.json  tasks.json
cppapp/: .gitignore  .vimspector.json  CMakeLists.txt  a.cpp  algo.cpp  b.cpp  c.cpp  cc.cpp  compile_flags.txt  d.cpp  scoville.cpp  tt.cpp  u.hpp
cppapp/foo/foo1/: CMakeLists.txt
cppapp/foo/foo1/src/: main.cpp
cppapp/foo/lib/: CMakeLists.txt
cppapp/foo/lib/bar/src/: bar.cpp
cppapp/foo/lib/bar_tool/include/: bar_tool.hpp
cppapp/inc/: aaa.h
cppapp/inc/my/: aaa.h  u.hpp
cppapp/src/: a.cpp  colormenu.cpp  d.cpp  dijstra.cpp  park.cpp  trie_sum.cpp
cppapp/tests/: CMakeLists.txt  codetest.cpp  hello_test.cpp  my_test_file.cpp
foo/lib/bar_tool/src/: bar_tool.cpp
inc/: List.h
lua/: .gitignore  lua  luarocks
lua/src/: main.lua
py/: a.py  multithread.py  pyproject.toml
py/abc/: hello.py  p1.py
rust/app/: Cargo.toml
rust/app/.vim/: coc-settings.json
rust/app/src/: main.rs
rust/app/src/util/: log.rs  log_test.rs
rust/app/tests/: code_test.rs  codetest.rs  my_test.rs
rust/atoz/: Cargo.toml
rust/atoz/.cargo/: config.toml
rust/atoz/src/: lib.rs
rust/atoz/src/calc/: mod.rs
rust/atoz/src/log/: log_macro.rs  mod.rs
rust/atoz/tests/: codetest.rs
rust/bend/: Cargo.toml
rust/bend/src/: main.rs
rust/gwn/: .pjt.vim  Cargo.toml  a.py  m.py  q.py
rust/gwn/.vim/: coc-settings.json
rust/gwn/src/: main.rs  plot.rs
rust/ropencl/: Cargo.toml
rust/todo/: .env  Cargo.toml  README.md  test.http
rust/todo/.vim/: coc-settings.json
rust/todo/db/: test.db
rust/todo/migrations/: 20250202034205_create_books_table.up.sql
rust/todo/src/: appstate.rs  db.rs  handler.rs  main.rs  model.rs
rust/todo/src/db_imp/: db_mysql.rs  db_sqlite.rs
rust/todo/tests/: book_handler.rs  book_models.rs  book_test.rs  codetest.rs  readme.md
rust/wp1/: Cargo.toml
rust/wp1/librocl/: Cargo.toml
rust/wp1/rocl/: Cargo.toml
self_cmake/: CMakeCache.txt  CMakeLists.txt
self_cmake/src/: main.cc
web/: index.html  package.json
web/boilerplate/: package.json  webpack.config.js
web/boilerplate/src/: index.html  index.js  style.css
web/js/: tetris.js
web/test/: package-lock.json  package.json
web/test/public/: index.html
web/test/src/: App.vue  MyGrid.vue  main.js  old.css
web/test/src/components/: HelloWorld.vue
web/test/src/components/layout/: Header.vue
web/tetris/: tetris.html  tetris.js
web/todo/: index.html
web/todo/css/: master.css  style.css
wordcloud/: requirements.txt  wc.py  wc00.py  wc01.py  words.txt
