[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
cors = "0.1.0"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "chrono", "uuid" ] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = "0.6.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }


[features]
default  	= ["sqlite"]
sqlite 		= ["sqlx/sqlite"]
mysql 		= ["sqlx/mysql"]
